chore: Update to vue 2.7.14 and Spring-Boot 3 (WIP).